# isosurfaces-color-mapping

./: .pylintrc  .tool-versions  README.md  color_scales.md  instruction.md  iso2dtf.py  isocomplete.py  isogm.py  isosurface.py  pyproject.toml  report.md
.github/workflows/: build.yml
assets/: colors.txt  feet_params.txt  head_params.txt  isovalues.txt  params.txt
src/: build_isovalue_slider.py  clipping.py  color_map.py  isovalue.py  read_vti.py  vtk_widget.py  window.py
